removing background images [10]

--- a/instagram2.html
+++ b/instagram2.html
@@ -6,19 +6,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000042.jpg" title="Chilly #LovestarRaceClub cross practice this morning. #cycling #bicycle #cx #cyclocross #crossishere" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Chilly #LovestarRaceClub cross practice this morning. #cycling #bicycle #cx #cyclocross #crossishere</small>
-                           </div>
-                           <img src="../lsphotos/image000042.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000043.jpg" title="Fall sunrise ride #cycling #bicycle #lakeMichigan #ridecannondale #bikechi #coffeeride #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -259,6 +246,19 @@
                               <small>Mini cyclocross practice on a beautiful summer evening. #bicycle #cycling #cyclocross #crossiscoming #cx #adventuredad #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000061.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000062.jpg" title="Got an early morning ride with my dad this morning! #cycling #bicycle #bikechi #evanston #lovestarraceclub #adventuredad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Got an early morning ride with my dad this morning! #cycling #bicycle #bikechi #evanston #lovestarraceclub #adventuredad</small>
+                           </div>
+                           <img src="../lsphotos/image000062.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
