--- a/index.html
+++ b/index.html
@@ -173,25 +173,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000010.jpg" title="Great cold ride this morning with great folks. ------
-#Repost @oliviabeaty
-・・・
-Cold #squad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Great cold ride this morning with great folks. ------
-#Repost @oliviabeaty
-・・・
-Cold #squad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000010.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000001.jpg" title="Cold #squad #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>oliviabeaty</h4>
@@ -434,6 +415,19 @@ Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClu
                               <small>Congrats to Rob on his podium finish! #lovestarraceclub #numberone</small>
                            </div>
                            <img src="../lsphotos/image000022.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000023.jpg" title="First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000023.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
