--- a/instagram1.html
+++ b/instagram1.html
@@ -6,19 +6,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000023.jpg" title="First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000023.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000024.jpg" title="2nd podium of the day! #BabyARC taking the top spot in the kids under 2yo race 😜 #cyclocross #cx #bicycle #cycling #striderbikes #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -259,6 +246,19 @@
                               <small>Skills & drills. #cyclocross #cx #bicycle #cycling #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000041.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000042.jpg" title="Chilly #LovestarRaceClub cross practice this morning. #cycling #bicycle #cx #cyclocross #crossishere" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Chilly #LovestarRaceClub cross practice this morning. #cycling #bicycle #cx #cyclocross #crossishere</small>
+                           </div>
+                           <img src="../lsphotos/image000042.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
